# plover_stroke

./: MANIFEST.in  README.md  _plover_stroke.c  plover_stroke.py  setup.cfg  setup.py  tox.ini
.github/workflows/: wheels.yml
test/: test_stroke.py
